--- a/manifest.json
+++ b/manifest.json
@@ -4,22 +4,22 @@
   "description": "A site for testing Angular",
   "icons": [
     {
-      "src": "assets/myAvatar.png",
+      "src": "assets/myAvatar_128x128.png",
       "sizes": "128x128",
       "type": "image/png"
     },
     {
-      "src": "assets/myAvatar.png",
+      "src": "assets/myAvatar_152x152.png",
       "sizes": "152x152",
       "type": "image/png"
     },
     {
-      "src": "assets/myAvatar.png",
+      "src": "assets/myAvatar_256x256.png",
       "sizes": "256x256",
       "type": "image/png"
     },
     {
-      "src": "assets/myAvatar.png",
+      "src": "assets/myAvatar_512x512.png",
       "sizes": "512x512",
       "type": "image/png"
     }
