--- a/manifest.json
+++ b/manifest.json
@@ -34,7 +34,7 @@
       "type": "image/png"
     }
   ],
-  "start_url": "/",
+  "start_url": "/home",
   "display": "standalone",
   "background_color": "#ffffff",
   "theme_color": "#673ab7"
