--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
-  "name": "Derek Schmid Personal Site",
-  "short_name": "DSPS",
+  "name": "Derek Schmid Dev Site",
+  "short_name": "DKS Dev",
   "description": "A site for testing Angular",
   "icons": [
     {
